<resources>
    <string name="app_name">WCN2 Alarm</string>

    <string name="your_alarms">Your Alarms:</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="no_alarms_defined">No Alarms defined</string>

    <string name="more">More</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="sure_to_delete">Delete the %s alarm?</string>
    <string name="cancel">Cancel</string>

    <string name="toggle_sensors">Toggle Sensors</string>
    <string name="connected_sensors">Connected Sensors</string>

    <string name="create_alarm">Create Alarm:</string>
    <string name="edit_alarm">Edit Alarm:</string>

    <string name="enter_name">Please enter a name:</string>
    <string name="name">Name</string>
    <string name="select_sound">Select Alarmtone</string>
    <string name="no_name_provided">A name must be provided!</string>
    <string name="name_already_used">This name is already in use!</string>

    <string name="choose_sound">Select an alarmtone:</string>
    <string name="sound_settings_explanation">Alarmtone has to be set in settings.</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="select_thresholds">Select Thresholds</string>

    <string name="define_thresholds">Define the thresholds that trigger the alarm:</string>
    <string name="add_threshold">Add Threshold</string>
    <string name="select_sensors">Select Sensors</string>
    <string name="no_thresholds_defined">No Thresholds defined!</string>

    <string name="select_sensors_label">Select the sensors that trigger the alarm:</string>
    <string name="save">Save</string>
    <string name="no_sensor_selected">Select at least one sensor!</string>

    <string name="alarm_trigger_service">Alarm Trigger Service</string>
    <string name="alarm_trigger_service_description">This channel is used to indicate to the user, that his alarms are monitored.</string>
    <string name="alarm_trigger_service_content">Your alarms are monitored!</string>

    <string name="alarm_group_channel">Alarms</string>
    <string name="alarm_channel_description">This channel is used to notify the user when the %s alarm is triggered.</string>
    <string name="alarm_triggered">%s triggered!</string>
    <string name="alarm_triggered_content">%s was triggered!</string>

    <string name="battery_low">Sensor Battery Low</string>
    <string name="battery_low_description">This channel is used to indicate a low sensor battery to the user.</string>
    <string name="battery_low_content">The battery of sensor WCN%d is almost empty.</string>

    <string-array name="types">
        <item>Temperature</item>
        <item>Humidity</item>
        <item>Presence</item>
    </string-array>

    <string-array name="units">
        <item>°C</item>
        <item>%</item>
        <item>sec</item>
    </string-array>

    <string-array name="operators">
        <item>&gt;</item>
        <item>=</item>
        <item>&lt;</item>
    </string-array>

    <string name="version_info" translatable="false">19.03</string>
</resources>
