<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/your_alarms"
                    android:textAlignment="viewStart"
                    android:textSize="26sp" />

                <ImageButton
                    android:id="@+id/add_alarm"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="5dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/add_alarm"
                    android:scaleType="fitXY"
                    android:tint="@color/colorPrimaryDark"
                    app:srcCompat="@drawable/ic_add" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/alarms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@android:color/darker_gray"
                    android:orientation="vertical"
                    android:showDividers="middle" />
            </ScrollView>

            <TextView
                android:id="@+id/no_alarms_defined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/no_alarms_defined" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>